remove broken sound package... since its... broken

--- a/configs/pi0w-no_bt.config
+++ b/configs/pi0w-no_bt.config
@@ -4973,7 +4973,7 @@ CONFIG_PACKAGE_glib2=y
 # CONFIG_PACKAGE_icu is not set
 # CONFIG_PACKAGE_icu-data-tools is not set
 # CONFIG_PACKAGE_icu-full-data is not set
-CONFIG_PACKAGE_imx-alsa-plugins=y
+# CONFIG_PACKAGE_imx-alsa-plugins is not set
 CONFIG_PACKAGE_jack=y
 # CONFIG_PACKAGE_jansson is not set
 # CONFIG_PACKAGE_jsoncpp is not set
@@ -6629,7 +6629,7 @@ CONFIG_PACKAGE_mpd-jack=y
 # CONFIG_PACKAGE_shairport-sync-mini is not set
 # CONFIG_PACKAGE_shairport-sync-openssl is not set
 # CONFIG_PACKAGE_shine is not set
-CONFIG_PACKAGE_sound=y
+# CONFIG_PACKAGE_sound is not set
 CONFIG_PACKAGE_sox=y
 # CONFIG_PACKAGE_squeezelite-full is not set
 # CONFIG_PACKAGE_squeezelite-mini is not set
