Fixed FIQ mode so it doesn't crash with USB2.0 devices. Added audioinjector zero support to config. This is budget analogue IO for the PI0w. Enabled zita-n2j by default. Tested streaming across the room with a 64K tap per channel FIR filter, and 48KHz sample rate... works fine on wifi. Ethernet port is not working due to high interrupt rate still... not enough horsepower... This is useful enough for budget DRC with bonus of uncompressed wifi streaming! Realtime kernel is working great too. CPU usage is pretty high so we need it

--- a/configs/pi0w-no_bt.config
+++ b/configs/pi0w-no_bt.config
@@ -2193,7 +2193,7 @@ CONFIG_BUSYBOX_CONFIG_KILLALL=y
 # CONFIG_BUSYBOX_CONFIG_MPSTAT is not set
 # CONFIG_BUSYBOX_CONFIG_NMETER is not set
 CONFIG_BUSYBOX_CONFIG_PGREP=y
-# CONFIG_BUSYBOX_CONFIG_PKILL is not set
+CONFIG_BUSYBOX_CONFIG_PKILL=y
 CONFIG_BUSYBOX_CONFIG_PIDOF=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_PIDOF_SINGLE is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_PIDOF_OMIT is not set
@@ -2202,7 +2202,7 @@ CONFIG_BUSYBOX_CONFIG_PIDOF=y
 CONFIG_BUSYBOX_CONFIG_PS=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_PS_WIDE=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_PS_LONG is not set
-# CONFIG_BUSYBOX_CONFIG_PSTREE is not set
+CONFIG_BUSYBOX_CONFIG_PSTREE=y
 # CONFIG_BUSYBOX_CONFIG_PWDX is not set
 # CONFIG_BUSYBOX_CONFIG_SMEMCAP is not set
 CONFIG_BUSYBOX_CONFIG_BB_SYSCTL=y
@@ -2216,7 +2216,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_CPU_GLOBAL_PERCENTS=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_TOPMEM is not set
 CONFIG_BUSYBOX_CONFIG_UPTIME=y
 # CONFIG_BUSYBOX_CONFIG_WATCH is not set
-# CONFIG_BUSYBOX_CONFIG_FEATURE_SHOW_THREADS is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_SHOW_THREADS=y
 
 #
 # Runit Utilities
@@ -3020,6 +3020,9 @@ CONFIG_PACKAGE_kmod-mmc=y
 # CONFIG_PACKAGE_kmod-pwm-bcm2835 is not set
 CONFIG_PACKAGE_kmod-random-bcm2835=y
 CONFIG_PACKAGE_kmod-random-core=y
+CONFIG_PACKAGE_kmod-regmap-core=y
+CONFIG_PACKAGE_kmod-regmap-i2c=y
+CONFIG_PACKAGE_kmod-regmap-spi=y
 # CONFIG_PACKAGE_kmod-rtc-ds1307 is not set
 # CONFIG_PACKAGE_kmod-rtc-ds1374 is not set
 # CONFIG_PACKAGE_kmod-rtc-ds1672 is not set
@@ -3062,16 +3065,49 @@ CONFIG_PACKAGE_kmod-spi-dev=y
 # Sound Support
 #
 CONFIG_PACKAGE_kmod-sound-core=y
-# CONFIG_PACKAGE_kmod-ac97 is not set
-# CONFIG_PACKAGE_kmod-sound-arm-bcm2835 is not set
+CONFIG_PACKAGE_kmod-ac97=y
+CONFIG_PACKAGE_kmod-sound-arm-bcm2835=y
 # CONFIG_PACKAGE_kmod-sound-dummy is not set
 # CONFIG_PACKAGE_kmod-sound-hda-core is not set
 # CONFIG_PACKAGE_kmod-sound-i8x0 is not set
 # CONFIG_PACKAGE_kmod-sound-mpu401 is not set
 # CONFIG_PACKAGE_kmod-sound-seq is not set
 # CONFIG_PACKAGE_kmod-sound-soc-ac97 is not set
-# CONFIG_PACKAGE_kmod-sound-soc-bcm2835-i2s is not set
-# CONFIG_PACKAGE_kmod-sound-soc-core is not set
+CONFIG_PACKAGE_kmod-sound-soc-bcm2835-i2s=y
+# CONFIG_PACKAGE_kmod-sound-soc-adau1977-adc is not set
+# CONFIG_PACKAGE_kmod-sound-soc-allo-boss-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-allo-digione is not set
+# CONFIG_PACKAGE_kmod-sound-soc-allo-katana-codec is not set
+# CONFIG_PACKAGE_kmod-sound-soc-allo-piano-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-allo-piano-dac-plus is not set
+# CONFIG_PACKAGE_kmod-sound-soc-audioinjector-octo-soundcard is not set
+CONFIG_PACKAGE_kmod-sound-soc-audioinjector-pi-soundcard=y
+# CONFIG_PACKAGE_kmod-sound-soc-audiosense-pi is not set
+CONFIG_PACKAGE_kmod-sound-soc-core=y
+# CONFIG_PACKAGE_kmod-sound-soc-digidac1-soundcard is not set
+# CONFIG_PACKAGE_kmod-sound-soc-dionaudio-loco is not set
+# CONFIG_PACKAGE_kmod-sound-soc-dionaudio-loco-v2 is not set
+# CONFIG_PACKAGE_kmod-sound-soc-fe-pi is not set
+# CONFIG_PACKAGE_kmod-sound-soc-googlevoicehat is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-amp is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-dacplus is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-dacplusadc is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-dacplusadc-pro is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-dacplusdsp is not set
+# CONFIG_PACKAGE_kmod-sound-soc-hifiberry-digi is not set
+# CONFIG_PACKAGE_kmod-sound-soc-i-sabe-q2m is not set
+# CONFIG_PACKAGE_kmod-sound-soc-iqaudio-codec is not set
+# CONFIG_PACKAGE_kmod-sound-soc-iqaudio-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-iqaudio-digi is not set
+# CONFIG_PACKAGE_kmod-sound-soc-justboom-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-justboom-digi is not set
+# CONFIG_PACKAGE_kmod-sound-soc-pisound is not set
+# CONFIG_PACKAGE_kmod-sound-soc-rpi-cirrus is not set
+# CONFIG_PACKAGE_kmod-sound-soc-rpi-dac is not set
+# CONFIG_PACKAGE_kmod-sound-soc-rpi-proto is not set
+# CONFIG_PACKAGE_kmod-sound-soc-rpi-simple-soundcard is not set
+# CONFIG_PACKAGE_kmod-sound-soc-rpi-wm8804-soundcard is not set
 # CONFIG_PACKAGE_kmod-sound-via82xx is not set
 CONFIG_PACKAGE_kmod-usb-audio=y
 
