--- a/configs/pi0w-no_bt.config
+++ b/configs/pi0w-no_bt.config
@@ -2757,8 +2757,8 @@ CONFIG_PACKAGE_kmod-hid=y
 CONFIG_PACKAGE_kmod-hid-generic=y
 CONFIG_PACKAGE_kmod-input-core=y
 CONFIG_PACKAGE_kmod-input-evdev=y
-# CONFIG_PACKAGE_kmod-input-gpio-encoder is not set
-# CONFIG_PACKAGE_kmod-input-gpio-keys is not set
+CONFIG_PACKAGE_kmod-input-gpio-encoder=y
+CONFIG_PACKAGE_kmod-input-gpio-keys=y
 # CONFIG_PACKAGE_kmod-input-gpio-keys-polled is not set
 # CONFIG_PACKAGE_kmod-input-joydev is not set
 # CONFIG_PACKAGE_kmod-input-matrixkmap is not set
@@ -3057,7 +3057,7 @@ CONFIG_PACKAGE_kmod-smi-bcm2835-dev=y
 # CONFIG_PACKAGE_kmod-mmc-spi is not set
 CONFIG_PACKAGE_kmod-spi-bcm2835=y
 CONFIG_PACKAGE_kmod-spi-bcm2835-aux=y
-# CONFIG_PACKAGE_kmod-spi-bitbang is not set
+CONFIG_PACKAGE_kmod-spi-bitbang=y
 CONFIG_PACKAGE_kmod-spi-dev=y
 # CONFIG_PACKAGE_kmod-spi-gpio is not set
 
@@ -3172,19 +3172,21 @@ CONFIG_PACKAGE_kmod-usb-net-dm9601-ether=y
 #
 # Video Support
 #
-# CONFIG_PACKAGE_kmod-backlight-pwm is not set
+CONFIG_PACKAGE_kmod-backlight=y
+CONFIG_PACKAGE_kmod-backlight-pwm=y
 # CONFIG_PACKAGE_kmod-drm-kms-helper is not set
 # CONFIG_PACKAGE_kmod-drm-ttm is not set
-# CONFIG_PACKAGE_kmod-fb is not set
-# CONFIG_PACKAGE_kmod-fb-cfb-copyarea is not set
-# CONFIG_PACKAGE_kmod-fb-cfb-fillrect is not set
-# CONFIG_PACKAGE_kmod-fb-cfb-imgblt is not set
-# CONFIG_PACKAGE_kmod-fb-sys-fops is not set
-# CONFIG_PACKAGE_kmod-fb-sys-ram is not set
-# CONFIG_PACKAGE_kmod-fb-tft is not set
+# CONFIG_PACKAGE_kmod-drm-vc4 is not set
+CONFIG_PACKAGE_kmod-fb=y
+CONFIG_PACKAGE_kmod-fb-cfb-copyarea=y
+CONFIG_PACKAGE_kmod-fb-cfb-fillrect=y
+CONFIG_PACKAGE_kmod-fb-cfb-imgblt=y
+CONFIG_PACKAGE_kmod-fb-sys-fops=y
+CONFIG_PACKAGE_kmod-fb-sys-ram=y
+CONFIG_PACKAGE_kmod-fb-tft=y
+CONFIG_PACKAGE_kmod-fb-tft-ili9341=y
 # CONFIG_PACKAGE_kmod-fb-tft-ili9486 is not set
 # CONFIG_PACKAGE_kmod-video-core is not set
-# CONFIG_PACKAGE_kmod-drm-vc4 is not set
 
 #
 # Virtualization
